--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
            <p class="bold">About Me</p>
          </div>
         <p class="semi-bold">My name is Thành and I'm a Web Developer.
-          <br> I have six month experience with HTML, CSS, JavaScript, PHP and mySQL.
+          <br> I have six month experience with HTML, CSS, JavaScript, PHP, mySQL, OOP and MVC model.
           <br>I am agile, honest, receptive and responsible for the job.
         </p>
     </div>
@@ -188,13 +188,31 @@
     <div class="resume_item resume_hobby">
       <div class="title">
            <p class="bold">Hobby</p>
-         </div>
+      </div>
        <ul>
          <li><i class="fas fa-code"></i></li>
          <li><i class="fas fa-book"></i></li>
          <li><i class="fas fa-headphones"></i></li>
          <li><i class="fas fa-coffee"></i></li>
       </ul>
+    </div>
+    <div class="resume_item resume_project">
+      <div class="title">
+           <p class="bold">Project</p>
+      </div>
+      <ol>
+        <li>
+            <div class="info">
+              <a href="#" style="text-decoration:none; color: #0bb5f4;" class="semi-bold">Project 1 - MVC Model</a> 
+            </div>
+        </li>
+        <br>
+        <li>
+            <div class="info">
+              <a href="#" style="text-decoration:none;color: #0bb5f4;" class="semi-bold">Project 2 - Web Shopping</a>
+            </div>
+        </li>
+      </ol>
     </div>
   </div>
 </div>
