--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="public/vendor/fontawesome-free-5.11.2-web/css/all.min.css">
   <title>Job Application</title>
 </head>
 <body>
-
   <div class="resume">
    <div class="resume_left">
      <div class="resume_profile">
@@ -58,7 +58,7 @@
          <ul>
            <li>
              <div class="skill_name">
-               HTML
+               HTML5
              </div>
              <div class="skill_progress">
                <span style="width: 85%;"></span>
@@ -67,7 +67,7 @@
            </li>
            <li>
              <div class="skill_name">
-               CSS
+               CSS3
              </div>
              <div class="skill_progress">
                <span style="width: 80%;"></span>
@@ -94,7 +94,7 @@
            </li>
            <li>
              <div class="skill_name">
-               JQUERY
+               JQuery
              </div>
              <div class="skill_progress">
                <span style="width: 65%;"></span>
@@ -132,7 +132,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">GitHub</p>
-               <p>0762559987 - MinhThanh93</p>
+               <span>0762559987 - MinhThanh93</span>
              </div>
            </li>
            <li>
@@ -141,7 +141,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Zalo</p>
-               <p>0762559987</p>
+               <span>0762559987</span>
              </div>
            </li>
          </ul>
@@ -155,8 +155,8 @@
            <p class="bold">About Me</p>
          </div>
         <p class="semi-bold">My name is Thành and I'm a Web Developer.
-          <br> I have six month experience with HTML, CSS, JavaScript, PHP, mySQL, OOP and MVC model.
-          <br>I am agile, honest, receptive and responsible for the job.
+          <br> I have six month experience with HTML5, CSS3, Bootstrap, JavaScript, Ajax, PHP, mySQL, and MVC model.
+          <br>I am agile, honest, receptive and responsible for the work.
         </p>
     </div>
     <div class="resume_item resume_work">
@@ -167,7 +167,7 @@
             <li>
               <div class="date">08/2019 - Present</div>
               <div class="info">
-                     <p class="semi-bold">Learning and do some mini project related to HTML, CSS, JavaScript, PHP and mySQL.</p> 
+                     <p class="semi-bold">Learning and do some project related to HTML5, CSS3, Bootstrap, JavaScript, Ajax, PHP, mySQL, and MVC model.</p> 
                 </div>
             </li>
         </ul>
@@ -203,21 +203,21 @@
       <ol>
         <li>
             <div class="info">
-              <a href="#" style="text-decoration:none; color: #0bb5f4;" class="semi-bold">Project 1 - MVC Model</a> 
+              <a href="https://github.com/0762559987/Project01-Student_list_manager" target="_blank" style="text-decoration:none; color: #0bb5f4; font-size: 18px;" class="semi-bold">Project 01 - Student List Manager</a> 
             </div>
         </li>
         <br>
         <li>
             <div class="info">
-              <a href="#" style="text-decoration:none;color: #0bb5f4;" class="semi-bold">Project 2 - Web Shopping</a>
+              <a href="https://github.com/0762559987/Project02-WebShopping" target="_blank" style="text-decoration:none;color: #0bb5f4;font-size: 18px;" class="semi-bold">Project 02 - Web Shopping</a>
             </div>
         </li>
       </ol>
     </div>
   </div>
 </div>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
-<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 
 
