--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <li>
               <div class="date">08/2019 - 04/2020</div>
               <div class="info">
-                     <p class="semi-bold">Learning HTML, CSS, JavaScript, PHP and mySQL at Online Classroom and on the Internet.</p> 
+                     <p class="semi-bold">Learning Web-programming at Online Classroom and on the Internet.</p> 
                 </div>
             </li>
         </ul>
