--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="public/vendor/fontawesome-free-5.11.2-web/css/all.min.css">
   <title>Job Application</title>
 </head>
 <body>
-  <div class="resume">
+  <div class="resume ">
    <div class="resume_left">
      <div class="resume_profile">
        <img src="public/img/avatar.jpg" alt="profile_pic">
@@ -28,7 +27,7 @@
                <i class="fas fa-map-signs"></i>
              </div>
              <div class="data">
-               1886/75/50 Huỳnh Tấn Phát,<br>Thị trấn Nhà Bè, TPHCM.
+               <p>1886/75/50 Huỳnh Tấn Phát,<br>Thị trấn Nhà Bè, TPHCM.</p>
              </div>
            </li>
             
@@ -37,7 +36,7 @@
                <i class="fas fa-envelope-open-text"></i>
              </div>
              <div class="data">
-              minhthanh12021993@gmail.com
+              <p>minhthanh12021993@gmail.com</p>
              </div>
            </li>
 
@@ -46,7 +45,7 @@
                <i class="fas fa-mobile-alt"></i>
              </div>
              <div class="data">
-               0762.5599.87
+                <p> 0762559987</p>
              </div>
            </li>
          </ul>
@@ -61,27 +60,27 @@
                HTML5
              </div>
              <div class="skill_progress">
-               <span style="width: 85%;"></span>
+               <span style="width: 90%;"></span>
              </div>
-             <div class="skill_per">85%</div>
+             <div class="skill_per">90%</div>
            </li>
            <li>
              <div class="skill_name">
                CSS3
              </div>
              <div class="skill_progress">
-               <span style="width: 80%;"></span>
+               <span style="width: 85%;"></span>
              </div>
-             <div class="skill_per">80%</div>
+             <div class="skill_per">85%</div>
            </li>
            <li>
              <div class="skill_name">
                PHP
              </div>
              <div class="skill_progress">
-               <span style="width: 70%;"></span>
+               <span style="width: 75%;"></span>
              </div>
-             <div class="skill_per">70%</div>
+             <div class="skill_per">75%</div>
            </li>
            <li>
              <div class="skill_name">
@@ -97,9 +96,9 @@
                JQuery
              </div>
              <div class="skill_progress">
-               <span style="width: 65%;"></span>
+               <span style="width: 60%;"></span>
              </div>
-             <div class="skill_per">65%</div>
+             <div class="skill_per">60%</div>
            </li>
          </ul>
        </div>
@@ -114,7 +113,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Facebook</p>
-               <p>facebook.com/HoangNguyenMinhThanh</p>
+               <a href="https://www.facebook.com/HoangNguyenMinhThanh">facebook.com/HoangNguyenMinhThanh</a>
              </div>
            </li>
            <li>
@@ -123,7 +122,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Skype</p>
-               <p>minhthanh12021993</p>
+               <a href="https://join.skype.com/invite/UGPsyQkZGfnt">MinhThanh93</a>
              </div>
            </li>
            <li>
@@ -132,7 +131,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">GitHub</p>
-               <span>0762559987 - MinhThanh93</span>
+               <a href="https://github.com/0762559987/CV-MinhThanh93">MinhThanh93</a>
              </div>
            </li>
            <li>
@@ -149,13 +148,13 @@
      </div>
   </div>
 
-  <div class="resume_right">
+  <div class="resume_right text-justify">
     <div class="resume_item resume_about">
         <div class="title">
            <p class="bold">About Me</p>
          </div>
         <p class="semi-bold">My name is Thành and I'm a Web Developer.
-          <br> I have six month experience with HTML5, CSS3, Bootstrap, JavaScript, Ajax, PHP, mySQL, and MVC model.
+          <br> I have more than six months experience with HTML5, CSS3, Bootstrap, JavaScript, Ajax, JQuery, PHP, mySQL, and MVC model.
           <br>I am agile, honest, receptive and responsible for the work.
         </p>
     </div>
@@ -167,7 +166,7 @@
             <li>
               <div class="date">08/2019 - Present</div>
               <div class="info">
-                     <p class="semi-bold">Learning and do some project related to HTML5, CSS3, Bootstrap, JavaScript, Ajax, PHP, mySQL, and MVC model.</p> 
+                     <p class="semi-bold">I have done several projects by JS and PHP.</p> 
                 </div>
             </li>
         </ul>
@@ -180,7 +179,13 @@
             <li>
               <div class="date">08/2019 - 04/2020</div>
               <div class="info">
-                     <p class="semi-bold">Learning Web-programming at Online Classroom and on the Internet.</p> 
+                     <p class="semi-bold">Learning Web-programming at <a href="https://thayloc.com/" style="text-decoration:none; color: #555555;" target="_blank">Lộc-Teacher Classroom</a> and on the Internet.</p> 
+                </div>
+            </li>
+            <li>
+              <div class="date">05/2019 - Present</div>
+              <div class="info">
+                     <p class="semi-bold">Learning Web-programming on the Internet every day.</p> 
                 </div>
             </li>
         </ul>
