--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <li>
               <div class="date">08/2019 - Present</div>
               <div class="info">
-                     <p class="semi-bold">I have done several projects by JS and PHP.</p> 
+                     <p class="semi-bold">I have done several projects by using JS and PHP.</p> 
                 </div>
             </li>
         </ul>
