--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <li>
               <div class="date">08/2019 - 04/2020</div>
               <div class="info">
-                     <p class="semi-bold">Learning Web-programming at <a href="https://thayloc.com/" style="text-decoration:none; color: #555555;" target="_blank">Lộc-Teacher Classroom</a> and on the Internet.</p> 
+                     <p class="semi-bold">Studying Web-programming at <a href="https://thayloc.com/" style="text-decoration:none; color: #555555;" target="_blank">Lộc-Teacher Classroom</a> and on the Internet.</p> 
                 </div>
             </li>
             <li>
