--- a/index.html
+++ b/index.html
@@ -207,14 +207,22 @@
       </div>
       <ol>
         <li>
-            <div class="info">
-              <a href="https://github.com/0762559987/Project01-Student_list_manager" target="_blank" style="text-decoration:none; color: #0bb5f4; font-size: 18px;" class="semi-bold">Project 01 - Student List Manager</a> 
+            <div class="info text-left">
+              <a href="https://github.com/0762559987/Project01-Student_list_manager" target="_blank" style="text-decoration:none; color: #0bb5f4; font-size: 18px;" class="semi-bold">Project 01 - Student List Manager</a>
+              <video width="350" height="200" controls name="Project01-demo">
+              <source src="public/video/Project01-demo.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video> 
             </div>
         </li>
         <br>
         <li>
-            <div class="info">
-              <a href="https://github.com/0762559987/Project02-WebShopping" target="_blank" style="text-decoration:none;color: #0bb5f4;font-size: 18px;" class="semi-bold">Project 02 - Web Shopping</a>
+            <div class="info text-left" id="1">
+              <a href="#1" style="text-decoration:none; color: #0bb5f4; font-size: 18px;" class="semi-bold">Project 02 - Web-Shopping</a><br>
+              <video width="350" height="200" controls name="Project02-demo">
+              <source src="public/video/Project02-demo.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+              </video> 
             </div>
         </li>
       </ol>
