--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
         </li>
         <br>
         <li>
-            <div class="info text-left">
-              <a href="https://0762559987.github.io/CV-MinhThanh93" style="text-decoration:none; color: #0bb5f4; font-size: 18px;" class="semi-bold">Project 02 - Web-Shopping</a><br>
+            <div class="info text-left" id="1">
+              <a href="#1" style="text-decoration:none; color: #0bb5f4; font-size: 18px;" class="semi-bold">Project 02 - Web-Shopping</a><br>
               <video width="350" height="200" controls name="Project02-demo">
               <source src="public/video/Project02-demo.mp4" type="video/mp4">
               Your browser does not support the video tag.
