--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
   <div class="resume ">
    <div class="resume_left">
      <div class="resume_profile">
-       <img src="public/img/avatar.jpg" alt="profile_pic">
+        <div style="height: 250px; width: 250px; background: white;"></div>
+       <!-- <img src="public/img/avatar.jpg" alt="profile_pic"> -->
      </div>
      <div class="resume_content">
        <div class="resume_item resume_info">
          <div class="title">
            <span class="bold">Hoàng Nguyễn Minh Thành</span>
            <br>
-           <p class="job-type" style="display: block; text-align: center;">I'm a Fresher Web Developer</p>
+           <p class="job-type" style="display: block; text-align: center;">I'm a Web Developer</p>
          </div>
          <ul>
 
@@ -45,7 +46,7 @@
                <i class="fas fa-mobile-alt"></i>
              </div>
              <div class="data">
-                <p> 0762559987</p>
+                <p> (+84) 762559987</p>
              </div>
            </li>
          </ul>
@@ -60,22 +61,13 @@
                HTML5
              </div>
              <div class="skill_progress">
-               <span style="width: 90%;"></span>
+               <span style="width: 80%;"></span>
              </div>
-             <div class="skill_per">90%</div>
+             <div class="skill_per">80%</div>
            </li>
            <li>
              <div class="skill_name">
                CSS3
-             </div>
-             <div class="skill_progress">
-               <span style="width: 85%;"></span>
-             </div>
-             <div class="skill_per">85%</div>
-           </li>
-           <li>
-             <div class="skill_name">
-               PHP
              </div>
              <div class="skill_progress">
                <span style="width: 75%;"></span>
@@ -84,12 +76,21 @@
            </li>
            <li>
              <div class="skill_name">
+               PHP
+             </div>
+             <div class="skill_progress">
+               <span style="width: 70%;"></span>
+             </div>
+             <div class="skill_per">70%</div>
+           </li>
+           <li>
+             <div class="skill_name">
                JavaScript
              </div>
              <div class="skill_progress">
-               <span style="width: 65%;"></span>
+               <span style="width: 60%;"></span>
              </div>
-             <div class="skill_per">65%</div>
+             <div class="skill_per">60%</div>
            </li>
            <li>
              <div class="skill_name">
